crates/aranya-policy-lang/tests/data/result_pattern_must_be_identifier.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Unknown error
  |
3 |         Ok(5) => 5
  |         ^^^^^^ Result pattern Ok() must contain an identifier
